--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ aux_links:
     - "//github.com/thiloklein/KitaMatch-Toolbox"
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+aux_links_new_tab: true
 
 # Sort order for navigation links
 # nav_sort: case_insensitive # default, equivalent to nil
@@ -100,7 +100,7 @@ gh_edit_branch: "gh-pages" # the branch that your docs is served from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
-color_scheme: "dark"
+color_scheme: "light"
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
@@ -113,7 +113,7 @@ plugins:
 kramdown:
   syntax_highlighter_opts:
     block:
-      line_numbers: false
+      line_numbers: true
 
 compress_html:
   clippings: all
