--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "KitaMatch-Toolbox on GitHub":
+  "KitaMatch-Toolbox auf GitHub":
     - "//github.com/thiloklein/KitaMatch-Toolbox"
 
 # Makes Aux links open in a new tab. Default is false
@@ -83,7 +83,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2022 Thilo Klein."
+# footer_content: "Copyright &copy; 2022 Thilo Klein."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -109,18 +109,3 @@ color_scheme: nil
 
 plugins:
   - jekyll-seo-tag
-
-kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: true
-
-compress_html:
-  clippings: all
-  comments: all
-  endings: all
-  startings: []
-  blanklines: false
-  profile: false
-  # ignore:
-  #   envs: all
