--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-# footer_content: "Copyright &copy; 2022 Thilo Klein."
+footer_content: "Copyright &copy; 2022 ZEW Marktdesign."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
