--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # Back to top link
 back_to_top: true
-back_to_top_text: "Back to top"
+back_to_top_text: "Zurück zum Seitenanfang"
 
 footer_content: "Copyright &copy; 2022 ZEW Marktdesign."
 
@@ -93,7 +93,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
-gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_link_text: "Seite auf GitHub bearbeiten"
 gh_edit_repository: "https://github.com/thiloklein/KitaMatch-Toolbox" # the github URL for your repo
 gh_edit_branch: "gh-pages" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
