--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ search:
   button: true
 
 # Enable or disable heading anchors
-heading_anchors: true
+heading_anchors: false
 
 # Aux links for the upper right navigation
 aux_links:
