--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 plugins:
   - jekyll-remote-theme
   
-remote_theme: just-the-docs/just-the-docs
+theme: just-the-docs
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -19,6 +19,7 @@ remote_theme: just-the-docs/just-the-docs
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: KitaMatch-Toolbox
+
 description: Dokumentation für die KitaMatch Software
 #baseurl: "/KitaMatch-Toolbox" # the subpath of your site, e.g. /blog
 url: "http://kitamatch.com" # the base hostname & protocol for your site, e.g. http://example.com
@@ -35,7 +36,7 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 # include: ["docs/tests/"]
 
 # Set a path/url to a logo that will be displayed instead of the title
-#logo: "/assets/images/KitaMatch_Logo_3.png"
+logo: "/assets/images/230510_Kita_Icons-TT.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
