--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "KitaMatch-Toolbox auf GitHub":
+  "KitaMatch auf GitHub":
     - "//github.com/thiloklein/KitaMatch-Toolbox"
 
 # Makes Aux links open in a new tab. Default is false
