--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Zurück zum Seitenanfang"
 
-#footer_content: "Copyright &copy; 2023 ZEW Marktdesign."
+footer_content: "Copyright &copy; 2023 ZEW Marktdesign."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
