--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: KitaMatch
 
 description: Dokumentation für die KitaMatch Software
 #baseurl: "/KitaMatch-Toolbox" # the subpath of your site, e.g. /blog
-url: "http://kitamatch.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kitamatch.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
