--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ plugins:
   - jekyll-remote-theme
   
 remote_theme: just-the-docs/just-the-docs
-theme: just-the-docs
+
+# theme: just-the-docs
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
